# Spam-Email-Detection

./: .gitignore  .vercelignore  README.md  Spam Classification Deployment.py  Spam Email Detection.ipynb  app.py  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  spam_deploy.py  vercel.json
Data Source/: SPAM.csv
Pickle Files/: feature.pkl
data/dataset/: dataset.csv
frontend/: README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: DirectPredict.css  DirectPredict.jsx  MboxUpload.css  MboxUpload.jsx
frontend/src/services/: api.js
outputs/2025-12-25_10-01-23/models/: SVM_model.pkl  vectorizer.pkl
outputs/2025-12-25_10-01-23/observations/: DecisionTree_detailed_metrics.csv  KNN_detailed_metrics.csv  LogisticRegression_detailed_metrics.csv  RandomForest_detailed_metrics.csv  SVM_detailed_metrics.csv  best_model_info.csv  best_parameters.csv  cross_validation_summary.csv  model_metadata.csv
outputs/2025-12-25_14-02-05/models/: vectorizer.pkl
outputs/2025-12-25_14-02-05/observations/: model_comparison_summary.csv  model_metadata.csv
src/components/: data_ingestion.py  data_transformation.py  model_training.py
src/config/: config.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: email_utils.py  logger.py  state.py
